--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "feather-icons": "^4.29.0",
+    "frappe-gantt": "^0.6.1",
     "jquery": "^3.6.0",
     "vue": "^3.2.13",
     "vue-router": "^4.1.3"
