--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.22.0",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
     "feather-icons": "^4.29.0",
     "frappe-gantt": "^0.6.1",
