--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "feather-icons": "^4.29.0",
     "vue": "^3.2.13",
+    "vue-google-charts": "^1.1.0",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
